# Tugas4_II4021-VaultThatPassword

./: CATATAN_PENGUJIAN.md  README.md  demo_flow.py  pyproject.toml
client_data/: raka.json
server_data/: server.sqlite3
src/pwmanager/: __init__.py  aes_gcm.py  app.py  cli.py  client_store.py  encoding.py  kdf.py  passwords.py  server_store.py  shamir.py  vault.py  visual_crypto.py
test/: server.sqlite3
test/client/: jeki.json
tests/: test_app_flow.py  test_crypto.py  test_visual_crypto.py
uji_manual/: server.sqlite3
uji_manual/client/: raka.json
